--- a/test.html
+++ b/test.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <audio></audio>
+    <table border="1">
+        <tr>
+            <th>continent</th>
+            <th>country</th>
+            <th>capital</th>   
+        </tr>
+        <tr>
+            <td>north america</td>
+            <td>USA</td>
+            <td>washington d.c.</td>
+        </tr>
+        <tr>
+            <td>europe</td>
+            <td>italy</td>
+            <td>rome</td>
+        </tr>
+    </table>
+    
 </body>
 </html>
